...
                loginUiState.email,
                loginUiState.password
            )

            if (signInResponse is Response.Failure) {
                val errorMessage = (signInResponse as Response.Failure).e.message
                    ?: "Unable to sign in"
                _uiEvents.send("Unable to sign in: $errorMessage")
            }
        }
    }

    fun forgotPassword() {
...
